--- a/pom.xml
+++ b/pom.xml
@@ -90,39 +90,62 @@
   </distributionManagement>
 
   <reporting>
-  <plugins> 
-<plugin> 
-<groupId>org.apache.maven.plugins</groupId> 
-<artifactId>maven-surefire-report-plugin</artifactId> 
-<version>3.0.0</version> 
-<reportSets> 
-<reportSet> 
-<id>aggregate</id> 
-<inherited>false</inherited> 
-<reports> 
-<report>report</report> 
-</reports> 
-<configuration> 
-<aggregate>true</aggregate> 
-</configuration> 
-</reportSet> 
-</reportSets> 
-</plugin> 
-<plugin> 
-<groupId>org.jacoco</groupId> 
-<artifactId>jacoco-maven-plugin</artifactId> 
-<version>0.8.9</version> 
-<reportSets> 
-<reportSet> 
-<id>aggregate</id> 
-<inherited>false</inherited> 
-<reports> 
-<report>report-aggregate</report> 
-</reports> 
-</reportSet> 
-</reportSets> 
-</plugin> 
-<plugin>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.6.3</version>
+        <configuration>
+          <failOnError>false</failOnError>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <id>aggregate</id>
+            <inherited>false</inherited>
+            <reports>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+          <reportSet>
+            <id>default</id>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin> 
+      <plugin> 
+      <groupId>org.apache.maven.plugins</groupId> 
+      <artifactId>maven-surefire-report-plugin</artifactId> 
+      <version>3.0.0</version> 
+      <reportSets> 
+      <reportSet> 
+      <id>aggregate</id> 
+      <inherited>false</inherited> 
+      <reports> 
+      <report>report</report> 
+      </reports> 
+      <configuration> 
+      <aggregate>true</aggregate> 
+      </configuration> 
+      </reportSet> 
+      </reportSets> 
+      </plugin> 
+      <plugin> 
+      <groupId>org.jacoco</groupId> 
+      <artifactId>jacoco-maven-plugin</artifactId> 
+      <version>0.8.9</version> 
+      <reportSets> 
+      <reportSet> 
+      <id>aggregate</id> 
+      <inherited>false</inherited> 
+      <reports> 
+      <report>report-aggregate</report> 
+      </reports> 
+      </reportSet> 
+      </reportSets> 
+      </plugin> 
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <version>3.18.0</version>
@@ -132,33 +155,50 @@
           </rulesets>
         </configuration>
       </plugin>
-</plugins>
+    </plugins>
     
   </reporting>
 
   <build>
     
     <plugins>
+    <!-- <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-javadoc-plugin</artifactId>
+      <version>3.6.3</version>
+      <configuration>
+        <failOnError>false</failOnError>
+      </configuration>
+      <executions>
+        <execution>
+          <id>aggregate</id>
+          <goals>
+            <goal>aggregate</goal>
+          </goals>
+          <phase>site</phase>
+        </execution>
+      </executions>
+    </plugin> -->
     <plugin> 
-<groupId>org.jacoco</groupId> 
-<artifactId>jacoco-maven-plugin</artifactId> 
-<version>0.8.9</version> 
-<executions> 
-<execution> 
-<goals> 
-<goal>prepare-agent</goal> 
-</goals> 
-</execution> 
- <!-- attached to Maven test phase --> 
-<execution> 
-<id>report</id> 
-<phase>test</phase> 
-<goals> 
-<goal>report</goal> 
-</goals> 
-</execution> 
-</executions> 
-</plugin>
+      <groupId>org.jacoco</groupId> 
+      <artifactId>jacoco-maven-plugin</artifactId> 
+      <version>0.8.9</version> 
+      <executions> 
+      <execution> 
+      <goals> 
+      <goal>prepare-agent</goal> 
+      </goals> 
+      </execution> 
+      <!-- attached to Maven test phase --> 
+      <execution> 
+      <id>report</id> 
+      <phase>test</phase> 
+      <goals> 
+      <goal>report</goal> 
+      </goals> 
+      </execution> 
+      </executions> 
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
